first addede work navbar & footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Menu (hidden by default on mobile) -->
-    <div id="menu" class="flex justify-between w-full lg:flex lg:items-center lg:gap-8 flex-col lg:flex-row mt-4 lg:mt-0">
+    <div id="menu" class="lg:flex justify-between w-full lg:flex lg:items-center lg:gap-8 flex-col lg:flex-row mt-4 lg:mt-0 hidden">
          <!-- Navigation Links -->
       <div class="mx-auto flex flex-col lg:flex-row text-xl text-center lg:text-left gap-4 lg:gap-8 w-full lg:w-auto justify-center lg:justify-start">
         <a href="#">Product</a>
@@ -352,7 +352,7 @@
         <a class="block pt-2 md:pt-5 text-white text-sm md:text-xl" href="#">Contact us</a>
       </div>
       <div class="mt-5 md:mt-24">
-        <p class="text-white text-xs pb-2">Follow Us</p>
+        <p class="text-white text-xs pb-4">Follow Us</p>
         <div class=" text-white flex gap-4">
           <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
           <a href=""><i class="fa-brands fa-instagram"></i></a>
