added work in html file

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <body class="min-h-screen font-[Sora]">
 
 <!-- Navbar section strat -->
-<nav class="sticky top-0 z-50 bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
-  <div class="max-w-[87.5%] mx-auto py-4 flex flex-wrap lg:flex-nowrap items-center justify-between">
+<section class="sticky top-0 z-50 bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
+  <nav class="max-w-[87.5%] mx-auto py-4 flex flex-wrap lg:flex-nowrap items-center justify-between">
 
     <!-- Logo -->
     <div class="max-w-[150px]">
-      <img src="./assets/logo-green.png" alt="logo">
+      <img src="./assets/logo-green.png" alt="logo" loading="lazy">
     </div>
 
     <!-- Hamburger Icon (Mobile only) -->
@@ -60,8 +60,8 @@
         <button class="text-xl border-2 border-[#179800] rounded-[8px] px-4 py-1 hover:bg-[#179800] hover:text-white transition duration-300 ease-in-out"><a href="#">Register</a></button>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</section>
 <!-- Navbar section end -->
 
 <!-- Banner section strat -->
@@ -80,7 +80,7 @@
 
     <!-- Hero Image -->
     <div class="max-w-[800px] mx-auto mt-10 px-4">
-      <img src="./assets/hero-img.png" alt="hero-img" >
+      <img src="./assets/hero-img.png" alt="hero-img" loading="lazy">
     </div>
   </div>
 </section>
@@ -95,21 +95,21 @@
       <div class="grid md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 text-center mt-7 gap-5">
         <div class="bg-[#EFEBE3] rounded-2xl">
          <div class="max-w-[150px] my-5 mx-auto">
-           <img src="./assets/support.png" alt="support">
+           <img src="./assets/support.png" alt="support" loading="lazy">
          </div>
           <h2 class="text-2xl font-semibold">24/7 Services </h2>
           <p class="text-xl px-8 pt-3 pb-10 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
         </div>
         <div class="bg-[#EFEBE3] rounded-2xl">
          <div class="max-w-[150px] my-5 mx-auto">
-           <img src="./assets/fast-delivery.png" alt="fast-delivery">
+           <img src="./assets/fast-delivery.png" alt="fast-delivery" loading="lazy">
          </div>
           <h2 class="text-2xl font-semibold">Fast Delivery </h2>
           <p class="text-xl px-8 pt-3 pb-10 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
         </div>
         <div class="bg-[#EFEBE3] rounded-2xl">
          <div class="max-w-[150px] my-5 mx-auto">
-           <img src="./assets/healthy-100.png" alt="healthy-100">
+           <img src="./assets/healthy-100.png" alt="healthy-100" loading="lazy">
          </div>
           <h2 class="text-2xl font-semibold">Healthy Products</h2>
           <p class="text-xl pt-3 pb-10 px-8 font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
@@ -128,7 +128,7 @@
       <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -141,7 +141,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-potato.png" alt="product-potato">
+            <img src="./assets/product-potato.png" alt="product potato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -154,7 +154,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-tomato.png" alt="product-tomato">
+            <img src="./assets/product-tomato.png" alt="product tomato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -167,7 +167,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -180,7 +180,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -193,7 +193,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-potato.png" alt="product-potato">
+            <img src="./assets/product-potato.png" alt="product potato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -206,7 +206,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-tomato.png" alt="product-tomato">
+            <img src="./assets/product-tomato.png" alt="product tomato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -219,7 +219,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -232,7 +232,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -245,7 +245,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-potato.png" alt="product-potato">
+            <img src="./assets/product-potato.png" alt="product potato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -258,7 +258,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-tomato.png" alt="product-tomato">
+            <img src="./assets/product-tomato.png" alt="product tomato" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -271,7 +271,7 @@
         </div>
         <div class="bg-white rounded-xl flex items-center gap-4 p-5">
           <div class="max-w-36 bg-[#EFEBE3] rounded-xl ">
-            <img src="./assets/product-onion.png" alt="product-onion">
+            <img src="./assets/product-onion.png" alt="product onion" loading="lazy">
           </div>
           <div>
             <div class="flex items-center gap-2">
@@ -296,12 +296,12 @@
         <div class="grid lg:grid-cols-1 xl:grid-cols-[1.5fr_1fr] gap-5">
           <div class="bg-[#115414] rounded-3xl p-5 flex justify-between">
            <div class="mt-3 text-center">
-             <img src="./assets/dawat-logo.png" alt="">
+             <img src="./assets/dawat-logo.png" alt="dawat logo png" loading="lazy">
              <button class="py-2 px-4 text-xs lg:py-3 lg:px-6 lg:text-xl bg-[#63B76D] text-white rounded-xl lg:rounded-2xl my-8">Cook Exotic Dishes</button>
              <h2 class="text-white font-extrabold text-xl lg:text-4xl">UP to 20% OFF</h2>
            </div>
            <div>
-             <img class="" src="./assets/product-dawat.png" alt="">
+             <img class="" src="./assets/product-dawat.png" alt="product dawat png" loading="lazy">
            </div>
           </div>
           <div class="bg-[#102861] rounded-3xl p-5 flex justify-between">
@@ -311,12 +311,10 @@
              <h2 class="text-white font-extrabold text-xl lg:text-4xl">UP to 40% OFF</h2>
            </div>
            <div>
-             <img src="./assets/product-indiagate.png" alt="">
+             <img src="./assets/product-indiagate.png" alt="product indiagate png" loading="lazy">
            </div>
           </div>
         </div>
-</div>
-
       </div>
   </section>
  <!-- Arrival section end -->
@@ -325,7 +323,7 @@
      <section class="relative">
       <div class="max-w-[87.5%] mx-auto grid lg:grid-cols-1 xl:grid-cols-[1fr_1.5fr] gap-5 bg-[#EFEBE3] rounded-[24px] py-[65px] -mb-64">
         <div class="w-[440px]">
-          <img src="./assets/fruit-basket.png" alt="fruit-basket.png">
+          <img src="./assets/fruit-basket.png" alt="fruit basket png" loading="lazy">
         </div>
         <div class="mx-3">
           <h1 class="text-2xl md:text-4xl font-semibold pb-8 text-[#111111]">Get Grocery News!</h1>
@@ -342,7 +340,7 @@
     <div class="max-w-[87.5%] mx-auto grid grid-cols-1 md:grid-cols-3">
       <div>
         <div class="w-[100px] md:w-[120px]">
-          <img src="./assets/logo-white.png" alt="logo-white">
+          <img src="./assets/logo-white.png" alt="logo white" loading="lazy">
         </div>
         <p class="text-white text-xs md:text-sm lg::text-xl pt-2">Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
       </div>
